--- a/newP/templates/pet_owner/petedit.html
+++ b/newP/templates/pet_owner/petedit.html
@@ -12,8 +12,9 @@
 		<p class="alert alert-info"> {{ w }} </p>
 		{% endfor %}
 
-	<!-- Edit pet -->
-		<div class="row" style="margin-top: 3%;">
+		<h3 style="margin-top: 2%;"> Edit Pet Owner Profile </h3>
+
+		<div class="row" style="margin-top: 1%;">
 			<div class="col-md"> 
 
 			<div>
