--- a/newP/templates/pet_owner/addpet.html
+++ b/newP/templates/pet_owner/addpet.html
@@ -40,7 +40,6 @@
           </select>
           </div>
                                    
-
           <div class="mb-3">
             <label for="title" class="form-label"> Pet Name </label>
             <input type="text" class="form-control" id="title" name="title">
@@ -75,7 +74,7 @@
           </div>
 
           <div class="mb-3">
-            <label class="form-label" for="customFile">Current weight</label>
+            <label class="form-label" for="customFile">Current weight (kg) </label>
             <input type="text" class="form-control" id="weight" name="weight">
           </div>
 
