--- a/newP/templates/pet_owner/pay_bills.html
+++ b/newP/templates/pet_owner/pay_bills.html
@@ -4,7 +4,7 @@
 
         <div style="margin-top: 3%;" class="row">
 
-          <h3> Pay Bill </h3>
+          <h3> My Bills </h3>
 
             <div class="col card-body" style="margin-top: 3%"> 
            
